# stm32-usb-self-writer

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  TODO.md  build.rs  memory.x  openocd-rtt0.cfg  openocd.cfg  s  s.html  Тест макета.txt
.cargo/: config.toml
.gitea/workflows/: ci.yaml  push-request.yaml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
lib/core/: Cargo.toml  build.rs
lib/core/src/: app_settings.rs  lib.rs  output_provider.rs
lib/core/src/protobuf/: encode_md_message.rs  md.rs  message_body.rs  messages.rs  mod.rs
lib/core/tests/: protobuf_tests.rs  settings_tests.rs
lib/heatshrink.rs/heatshrink-rust/: build.rs
lib/heatshrink.rs/heatshrink-rust-macro/: Cargo.toml
lib/libfreertos/: Cargo.toml  build.rs
lib/my-proc-macro/src/: lib.rs
lib/qspi_stm32l4x3/: Cargo.toml
lib/qspi_stm32l4x3/src/hal/: qspi.rs  rcc.rs
lib/qspi_stm32l4x3/src/stm32l4x3/quadspi/: abr.rs  ar.rs  ccr.rs  cr.rs  dcr.rs  dlr.rs  dr.rs  fcr.rs  lptr.rs  pir.rs  psmar.rs  psmkr.rs
lib/stm32-usb.rs.saved_copy/firmware/usbd_scsi/: Cargo.toml
lib/stm32-usb.rs.saved_copy/firmware/usbd_scsi/src/scsi/commands/: mode_parameter.rs
src/: config.rs  lib.rs  main.rs
src/main_data_storage/: diff_writer.rs  mod.rs
src/main_data_storage/qspi_storage/: qspi_driver.rs
src/protobuf/: device_info.rs  messages.rs  mod.rs  monitoring_over_conditions.rs  output.rs  process_request.rs  process_requiest.rs  process_settings.rs
src/sensors/freqmeter/hw_in_counters/: in_counters_l433.rs
src/settings/: app_settings.rs  mod.rs  store_async.rs
src/support/: freertos_hooks.rs  logging.rs  new_freertos_timer.rs
src/threads/: monitor.rs  protobuf_server.rs  sensor_processor.rs  usb_periph.rs  usbd.rs  vfs.rs
src/threads/vfs/: static_data.rs
src/workmodes/: high_performance_mode.rs  mod.rs  output_storage.rs  power_save_mode.rs  recorder_mode.rs
src/workmodes/processing/: common.rs  high_performance.rs  recorder_processor.rs
tests/: defmt_tests.rs  integration_test.rs
