[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "stm32-usb-self-writer"
version = "0.3.0"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false, features = ["alloc"] }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
static_assertions = "1.1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
vcell = "0.1.3"
bitflags = "1.0.4"

embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.6.11" # need by stm32l4 == 0.13.0

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

strum = { version = "0.27", default-features = false, features = ["derive"] }

usb-device = "0.2.7"
stm32-usbd = "0.6.0"
usbd-serial = { git = "https://github.com/ololoshka2871/usbd-serial.git", rev = "538d902" }
usbd_scsi = { git = "https://github.com/ololoshka2871/stm32-usb.rs.git", rev = "9f80627", features = ["no-zlp", "direct-read-hack"] }
usbd_mass_storage = { git = "https://github.com/ololoshka2871/stm32-usb.rs.git", rev = "9f80627" }

# defmt
defmt = "1"
defmt-rtt = "1"
defmt-macros = "1"
panic-abort = "0.3"

stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal.git", rev = "e4835469a38b844865a6d5eef91542bdc6822941", features = ["rt", "unproven", "stm32-usbd"] }
freertos-rust = { git = "https://github.com/lobaro/FreeRTOS-rust.git", rev = "e365ca8a11" }

self-recorder-packet = { git = "https://gitea.sctbelpa/SCTBElpa/self-recorder-packet.git", rev = "e25058f91e", default-features = false }

heatshrink-rust = { git = "https://github.com/ololoshka2871/heatshrink.rs.git", rev = "0af9332" }
heatshrink-rust-macro = { git = "https://github.com/ololoshka2871/heatshrink.rs.git", rev = "0af9332" }
emfat-rust = { path = "lib/emfat" }
flash-settings-rs = { path = "lib/flash-settings.rs" }
my-proc-macro = { path = "lib/my-proc-macro" }
qspi-stm32lx3 = { path = "lib/qspi_stm32l4x3" }

prost = { version = "0.13", default-features = false, features = ["prost-derive"] }

[build-dependencies]
cc = "1.0.52"
freertos-cargo-build = "0.1.1"
prost-build = "0.13"

[profile.dev.package."*"]
opt-level = "s"

[profile.dev]
opt-level = "s"
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = false # Делает только хуже

[features]
default = [
  "stm32l433",
  "freqmeter-start-stop", # При временах измерения <= 100 мс только этот режим адекватно работает
  "monitor-heap",
  "led-blink",
  "led-blink-each-block",
  "flash-sleep",
  #"monitor-output", # В режиме самописца данных там нет
  #"monitor",
  #"no-flash",
]

monitor-heap = ["monitor"]
monitor-output = ["monitor"]
stm32l433 = ["stm32l4xx-hal/stm32l433", "qspi-stm32lx3/stm32l433"]
monitor = []
freqmeter-start-stop = []
led-blink = []
led-blink-each-block = ["led-blink"]
flash-sleep = []
no-flash = [] # only for debug 
