[package]
name = "corelogic"
version = "0.1.0"
edition = "2021"

[lib]
name = "corelogic"

[dependencies]
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
prost = { version = "0.14", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

my-proc-macro = { path = "../my-proc-macro" }

[build-dependencies]
prost-build = "0.14"
